<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout_setting"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="380dp"
        android:orientation="vertical"
        android:paddingRight="40dp">

        <Button
            android:id="@+id/salva_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="200dp"
            android:text="Salva" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingTop="30dp">

       <TextView
           android:id="@+id/att_local"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/att_localizzazione" />

       <Switch
           android:id="@+id/switch_localizzazione"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:paddingRight="40dp" />
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/textRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Range Di Ricerca" />

        <SeekBar
            android:id="@+id/seekBarRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>




    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center"
        app:fabCradleRoundedCornerRadius="@dimen/bottom_app_bar_fab_cradle_corner_radius"
        app:fabCradleMargin="@dimen/bottom_app_bar_fab_cradle_margin"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways">

        <LinearLayout
            android:id="@+id/bottom_app_bar_content_container"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/min_touch_target_size"
            android:layout_marginVertical="@dimen/grid_0_5"
            android:paddingHorizontal="@dimen/grid_0_5"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:foreground="@drawable/bottom_app_bar_title_foreground">

            <ImageView
                android:id="@+id/bottom_app_bar_chevron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bottom_app_bar_chevron_content_desc"
                android:layout_gravity="center_vertical"
                app:tint="?attr/colorOnPrimarySurface"
                app:srcCompat="@drawable/ic_arrow_drop_up" />

            <ImageView
                android:id="@+id/bottom_app_bar_logo"
                android:layout_width="@dimen/bottom_app_bar_logo_size"
                android:layout_height="@dimen/bottom_app_bar_logo_size"
                android:layout_marginLeft="@dimen/grid_1"
                android:contentDescription="@string/bottom_app_bar_logo_content_desc"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_reply_logo" />

            <TextView
                android:id="@+id/bottom_app_bar_title"
                android:textAppearance="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/grid_1"
                android:text="@string/navigation_inbox"
                android:textColor="?attr/colorControlNormal"/>

        </LinearLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/bottom_app_bar"
        android:contentDescription="@string/fab_compose_email_content_description"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="250dp"
        android:background="?android:attr/listDivider" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>


